[package]
name = "rist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust bindings for librist (RIST protocol)"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
rist-sys = { path = "../rist-sys" }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "io-util", "macros"], optional = true }
